I hate spring but I like winter

--- a/Spring/pom.xml
+++ b/Spring/pom.xml
@@ -3,9 +3,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.myp</groupId>
+	<groupId>com.studio7707</groupId>
 	<artifactId>controller</artifactId>
-	<name>Ich02</name>
+	<name>Spring</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
@@ -31,13 +31,13 @@
 
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>aopalliance</groupId>
 			<artifactId>aopalliance</artifactId>
 			<version>1.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -158,6 +158,17 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<!-- jQuery -->
+		<dependency>
+
+		<groupId>org.webjars</groupId>
+
+		<artifactId>jquery-ui</artifactId>
+
+		<version>1.10.3</version>
+
+	</dependency>
+
 
 		<!-- Test -->
 		<dependency>
